--- a/noor-scroll.html
+++ b/noor-scroll.html
@@ -5,13 +5,18 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Noor Scroll Motion</title>
 <style>
-  html,body{margin:0;padding:0;background:#000;height:100%}
-  #noor-scroll{position:relative}
-  .scroll-space{height:200dvh}
-  .sticky-wrap{position:sticky;top:0;height:100dvh;overflow:hidden;background:#000;display:flex;align-items:center;justify-content:center}
-  .sticky-wrap video{width:100%;height:100%;object-fit:cover}
+  html,body{margin:0;padding:0;background:#000;height:100%;}
+  #noor-scroll{position:relative;}
+  .scroll-space{height:200vh;}
+  .sticky-wrap{position:sticky;top:0;height:100vh;overflow:hidden;background:#000;display:flex;align-items:center;justify-content:center;}
+  .sticky-wrap video{width:100%;height:100%;object-fit:cover;max-width:100%;max-height:100%;}
   .hint{position:absolute;bottom:10px;left:50%;transform:translateX(-50%);color:#bbb;font:12px/1 system-ui,tahoma;opacity:.7}
+
+  /* HIDE SCROLLBARS, keep scroll working */
+  html, body { -ms-overflow-style:none; scrollbar-width:none; }
+  html::-webkit-scrollbar, body::-webkit-scrollbar { width:0; height:0; display:none; }
 </style>
+
 </head>
 <body>
 <section id="noor-scroll">
